--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,9 +1,24 @@
-.App {
-  margin: 0 auto;
-  padding: 2.3em 3em 2em;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  border: 2px dashed #888888;
-  border-radius: 30px;
+
+.apple {
+    width: 230px;
+    height: 200px;
+    border-radius: 36% 36% 41% 41% / 42% 42% 75% 75%;   
+    position: relative;
+    margin: 80px auto 0;
+    background: white;
+}
+
+.footer {
+  position: absolute;
+  width: 60%;
+  height: 62%;
+  right: -40%;
+  top: 8%;
+  border-radius: 60%;
+  background: #CCC;
+}
+.middle span{
+}
+
+.top {
 }
