--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,11 @@
+
 .apple {
-  width: 230px;
-  height: 200px;
-  border-radius: 36% 36% 41% 41% / 42% 42% 75% 75%;
-  position: static;
-  margin: 80px auto 0;
-  background: white;
+    width: 230px;
+    height: 200px;
+    border-radius: 36% 36% 41% 41% / 42% 42% 75% 75%;   
+    position: relative;
+    margin: 80px auto 0;
+    background: white;
 }
 
 .footer {
@@ -14,9 +15,9 @@
   right: -40%;
   top: 8%;
   border-radius: 60%;
-  background: #ccc;
+  background: #CCC;
 }
-.middle span {
+.middle span{
 }
 
 .top {
